Provider settings added